methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:4: error: not found: value growfFlower
  growfFlower(Color.CYAN);
  ^