methods.flowerpot.FlowerPot.scala.code
def growpot() {
  growFlower(Color.RED);
  forward();forward();forward();
  growfFlower(Color.CYAN);
  right();forward();
  forward();
  left();backward();backward();backward()
  growFlower(Color.ORANGE);
  backward();
  backward();
  backward();
  right();
  forward();
  forward();
  left();
  growFlower(Color.PINK);
  forward();forward();forward();
  growFlower(Color.GREEN);
}

def growFlower(c: Color) {
  setBrushColor(c);
  brushDown();
  forward();
  left();
  forward();
  backward();
  right();
  forward();
  backward();
  right();
  forward();
  backward();
  left();
  setBrushColor(Color.YELLOW);
  brushUp();
}

